# argentos-core

./: .argent-repo.json  .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .oxfmtrc.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  LICENSE  README.md  SECURITY.md  VISION.md  appcast.xml  docker-compose.yml  docker-setup.sh  docs.acp.md  drizzle.config.ts  install-cli.sh  install.ps1  install.sh  openclaw.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  public-core.manifest.json  render.yaml  tsconfig.json  tsdown.config.ts  vitest.config.ts  vitest.e2e.config.ts  vitest.live.config.ts
tools/aos/aos-1password/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-1password/agent-harness/cli_aos/: __init__.py
tools/aos/aos-1password/agent-harness/cli_aos/onepassword/: cli.py  client.py  config.py  constants.py  runtime.py
tools/aos/aos-1password/agent-harness/tests/: test_cli.py
tools/aos/aos-airtable/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-airtable/agent-harness/cli_aos/: __init__.py
tools/aos/aos-airtable/agent-harness/cli_aos/airtable/: cli.py  client.py  config.py  constants.py  errors.py  runtime.py  service_keys.py
tools/aos/aos-airtable/agent-harness/tests/: test_cli.py
tools/aos/aos-anthropic/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-anthropic/agent-harness/cli_aos/anthropic/: cli.py  client.py  config.py  constants.py  runtime.py
tools/aos/aos-anthropic/agent-harness/tests/: test_cli.py
tools/aos/aos-asana/agent-harness/: permissions.json  pyproject.toml
tools/aos/aos-asana/agent-harness/cli_aos/asana/: cli.py  client.py  config.py  constants.py  errors.py  runtime.py  service_keys.py
tools/aos/aos-asana/agent-harness/tests/: test_cli.py
tools/aos/aos-blacksmith/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-blacksmith/agent-harness/cli_aos/: __init__.py
tools/aos/aos-blacksmith/agent-harness/tests/: test_cli.py
tools/aos/aos-box/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-box/agent-harness/tests/: test_cli.py
tools/aos/aos-calendar/agent-harness/: permissions.json  pyproject.toml
tools/aos/aos-calendar/agent-harness/cli_aos/: __init__.py
tools/aos/aos-calendar/agent-harness/shims/: aos-calendar
tools/aos/aos-calendar/agent-harness/tests/: test_cli.py
tools/aos/aos-canva/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-canva/agent-harness/cli_aos/: __init__.py
tools/aos/aos-canva/agent-harness/tests/: test_cli.py
tools/aos/aos-claude-code/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-claude-code/agent-harness/tests/: test_cli.py
tools/aos/aos-clientsync/agent-harness/: permissions.json  pyproject.toml
tools/aos/aos-clientsync/agent-harness/tests/: test_cli.py
tools/aos/aos-close/agent-harness/: permissions.json  pyproject.toml
tools/aos/aos-close/agent-harness/tests/: test_cli.py
tools/aos/aos-cognee/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-cognee/agent-harness/tests/: test_cli.py
tools/aos/aos-connectwise/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-connectwise/agent-harness/tests/: test_cli.py
tools/aos/aos-dropbox/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-dropbox/agent-harness/tests/: test_cli.py
tools/aos/aos-elevenlabs/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-elevenlabs/agent-harness/tests/: test_cli.py  test_client.py
tools/aos/aos-firecrawl/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-firecrawl/agent-harness/cli_aos/: __init__.py
tools/aos/aos-firecrawl/agent-harness/tests/: test_cli.py
tools/aos/aos-google-drive/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-google-drive/agent-harness/tests/: test_cli.py
tools/aos/aos-google-places/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-google-places/agent-harness/cli_aos/: __init__.py
tools/aos/aos-google-places/agent-harness/tests/: test_cli.py
tools/aos/aos-hootsuite/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-hootsuite/agent-harness/tests/: conftest.py  test_cli.py
tools/aos/aos-hubspot/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-hubspot/agent-harness/cli_aos/: __init__.py
tools/aos/aos-hubspot/agent-harness/tests/: test_cli.py
tools/aos/aos-jira/agent-harness/: permissions.json  pyproject.toml
tools/aos/aos-jira/agent-harness/tests/: test_cli.py
tools/aos/aos-linear/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-linear/agent-harness/tests/: test_cli.py
tools/aos/aos-lion-report/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-lion-report/agent-harness/tests/: test_cli.py
tools/aos/aos-m365/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-m365/agent-harness/cli_aos/: __init__.py
tools/aos/aos-m365/agent-harness/tests/: test_cli.py
tools/aos/aos-make/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-make/agent-harness/tests/: test_cli.py
tools/aos/aos-n8n/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-n8n/agent-harness/tests/: test_cli.py
tools/aos/aos-nanob/agent-harness/: permissions.json  pyproject.toml
tools/aos/aos-nanob/agent-harness/tests/: test_flattener.py  test_generate.py  test_prompt_builder.py
tools/aos/aos-neon/agent-harness/: permissions.json  pyproject.toml
tools/aos/aos-neon/agent-harness/tests/: test_cli.py
tools/aos/aos-notion/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-notion/agent-harness/tests/: test_cli.py
tools/aos/aos-pagerduty/agent-harness/: README.md  permissions.json  pyproject.toml
tools/aos/aos-pagerduty/agent-harness/tests/: conftest.py  test_cli.py
(+5490 files in other folders)
