[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aos-1password"
version = "0.1.0"
description = "ArgentOS 1Password connector"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aos-1password = "cli_aos.onepassword.cli:cli"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_aos*"]
