[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aos-box"
version = "0.1.0"
description = "ArgentOS Box connector"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aos-box = "cli_aos.box.cli:cli"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_aos*"]
