[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aos-claude-code"
version = "0.1.0"
description = "Agent harness for the aos-claude-code connector"
requires-python = ">=3.11"
dependencies = ["click>=8.1,<9"]

[project.scripts]
aos-claude-code = "cli_aos.claude_code.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_aos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
