[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aos-cognee"
version = "0.1.1"
description = "Agent-native Cognee knowledge graph CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1", "cognee>=0.5.5"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aos-cognee = "cli_aos.cognee.cli:cli"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_aos*"]

[tool.pytest.ini_options]
pythonpath = ["."]
