[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aos-hootsuite"
version = "0.1.0"
description = "ArgentOS Hootsuite connector"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aos-hootsuite = "cli_aos.hootsuite.cli:cli"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_aos*"]
