[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aos-m365"
version = "0.1.0"
description = "Agent-native Microsoft 365 / Graph connector."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aos-m365 = "cli_aos.m365.cli:cli"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_aos*"]
